[package]
name = "test-all-ios-frameworks"
version = "0.1.0"
authors = ["Sebastian Imlay <sebastian.imlay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies.bindgen]
path = "../rust-bindgen/"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2.7"
block = "0.1.6"
